# framework

./: .env-old  .env.example  .gitignore  CHANGELOG.md  Copia.env.txt  Dockerfile  Dockerfile.frontend  LICENSE  README.md  agent.md  alembic.ini  description.md  docker-compose.app.yml  docker-compose.infra.yml  framework_specs.md  inspect_data.py  pyproject.toml  readme296.hybrid.md  requirements-hybrid.txt  requirements.txt  temp.md  xSUBSCRIPTION.txt
.ignore.workinprogress/: AliasAbsorptionMimicry_Analysis.md  Engine Bypasses Analyst via Taxonomy.md  analysis_results.md  audit_tap_v22.md  developer_implementation_guide.md  framework_specs.md  github_repository_plan.md  notebookslm_list.md  old_implementation_plan.md  oracle_developer_qa.md
.ignore.workinprogress/TAPv4/: Phase2.md
.ignore.workinprogress/remedy_implementation/: implementation_plan.md  implementation_plan25626_v2.md  patv-nuova architettura target-state.md  patv-nuova architettura(summary).md  patv31beta.md
Notes/: Architettura e Potatura nel Framework Tree of Attacks (TAP).md  Architetture di Attacco e Dataset per il Jailbreak degli LLM.md
Quizzes/: Ingegneria Mappa.json
Sources/: 10-GitHub - elder-plinius-OBLITERATUS- OBLITERATE THE CHAINS THAT BIND YOU.md  12-Learning to Monitor Autonomous LLM Agents via Theory-of-Mind Reasoning - arXiv.md  17-PriMod4AI- Lifecycle-Aware Privacy Threat Modeling for AI Systems using LLM - NDSS Symposium.md  20-Representation Engineering- A Top-Down Approach to AI Transparency - Semantic Scholar.md  29-What Is LLM Security- Risks, Threats, and Best Practices - Zscaler, Inc..md  3-Activation Steering in 2026- A Practitioner's Field Guide - Subhadip Mitra.md  31-Analisi sistematica dei prompt attacks di nuova generazione- ottimizzazione avversariale, dinamiche .md  4-Activation Steering in LLMs - Emergent Mind.md  46-What Drives Representation Steering- A Mechanistic Case Study on Steering Refusal - arXiv.md  48-[2403.01251] Accelerating Greedy Coordinate Gradient and General Prompt Optimization via Probe Sampl.md
TAPv4/: agent.md
TAPv4/migration/: APPROFONDISCI TECNICHE DI PROMPT ATTACK UTILIZZATE.md  APP_Opzione_Ibrida_Tech_Specs.md  TAP_vNext_Projects_CHRONOS_HYDRA.md
data/: eig_property_universe.json
docs/: developer-guide.md  implementation-plan.md
entrypoints/: run_chronos.py  run_engine.py  run_stream.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
migrations/: README  env.py
migrations/versions/: 20260627_1923_hybrid202606_initial_chronos_schema.py
remedy_implementation/: Agent_DPAF_manager.md  Agent_Intel_Extractor.md  perplexity_deepdive_patv3.1.beta.md  perplexity_esaminabranch_patv3.1.beta.md
remedy_implementation/Old/: instructions.v.3.1.md
remedy_implementation/claude/: task.md
remedy_implementation/implementation plan/: walkthrough.md
remedy_implementation/implementation plan _ latest/: GUIDA_DEVELOPER_OAuth2_PKCE_X_API.md  solution_APIX(Twitter).md
scripts/: analyze_logs.py  debezium.ps1  fix_integration_test.py  fix_orchestrator_attack_id.py  fix_orchestrator_mypy.py  seed_vgenome.py  setup_db.py  test_refresh.py  test_stream.py  verify_x_creds.py
src/tap/: api.py  (+23 more)
tests/: conftest.py  test_agents.py  test_api.py  test_classifier.py  test_db.py  test_dpa.py  test_followup.py  test_health.py  test_llm_client.py  test_models.py  test_prompt_sanitiser.py  test_ssot.py  test_strategies.py  test_x_client.py  test_x_client_new.py
(+148 files in other folders)
