[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tap-framework"
version = "3.0.0"
description = "Tree of Attacks with Pruning — LLM Security Research Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Framework Studio", email = "dev@framework-studio.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tweepy>=4.14.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "openai>=1.50.0",
    "asyncio-throttle>=1.0.2",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0",
    "pytest-postgresql>=6.1",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "mypy-protobuf>=3.6",
]
hybrid = [
    "neo4j>=5.26",
    "torch>=2.4.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.29",
    "temporalio>=1.9.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "kafka-python>=2.0.5",
    "redis>=5.2.0",
    "clickhouse-driver>=0.2.9",
    "testcontainers>=4.8.0",
]

[project.scripts]
tap-server = "tap.api:main"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
disable_error_code = ["import-untyped"]
mypy_path = ["src"]
packages = ["tap", "hydra", "chronos", "shared", "adapters"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/hydra", "tests/chronos", "tests/shared", "tests/integration", "tests"]

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "torch.*",
    "torchvision.*",
    "temporalio.*",
    "asyncpg",
    "asyncpg.*",
    "kafka.*",
    "redis.*",
    "clickhouse_driver.*",
    "testcontainers.*",
    "grpc.*",
    "google.protobuf.*",
]
ignore_missing_imports = true
